--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8',
                 email: 'draevynth@gmail.com',
                 amount: ,10000
-                currency: '$',
+                currency: 'USD',
                 metadata: {
                     custom_fields: [
                         {
