--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             var handler = PaystackPop.setup({
                 key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8',
                 email: 'draevynth@gmail.com',
-                amount: ,10000
+                amount: amount,
                 currency: 'USD',
                 metadata: {
                     custom_fields: [
