--- a/index.html
+++ b/index.html
@@ -3,7 +3,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRAEVYNTH | Official Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #0d0d0d;
+            color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #1a1a1a;
+            padding: 20px;
+            text-align: center;
+        }
+        .logo {
+            font-size: 28px;
+            font-weight: bold;
+            color: #00ff99;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 10px 0 0 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        nav a {
+            color: #f5f5f5;
+            text-decoration: none;
+        }
+        section {
+            padding: 40px 20px;
+            text-align: center;
+        }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .product-card {
+            background: #1a1a1a;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        .product-card img {
+            width: 100%;
+            border-radius: 10px;
+            margin-bottom: 15px;
+        }
+        .product-card h3 {
+            color: #00ff99;
+            margin-bottom: 10px;
+        }
+        .product-card button {
+            padding: 10px 20px;
+            background-color: #00ff99;
+            color: #0d0d0d;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .product-card button:hover {
+            background-color: #00cc7a;
+        }
+        footer {
+            background: #1a1a1a;
+            padding: 20px;
+            text-align: center;
+            margin-top: 40px;
+        }
+    </style>
     <script src="https://js.paystack.co/v1/inline.js"></script>
 </head>
 <body>
@@ -31,34 +104,38 @@
     <h2>Our Products</h2>
     <div class="product-grid">
         <div class="product-card">
-            <img src="https://via.placeholder.com/200" alt="Silent Branding Masterclass">
+            <img src="https://placehold.co/600x400/0d0d0d/00ff99?text=Silent+Branding+Masterclass" alt="Silent Branding Masterclass">
             <h3>Silent Branding Masterclass</h3>
             <p>$49</p>
             <button onclick="payWithPaystack('Silent Branding Masterclass', 4900)">Buy Now</button>
         </div>
+
         <div class="product-card">
-            <img src="https://via.placeholder.com/200" alt="1-on-1 Business Strategy Session">
+            <img src="https://placehold.co/600x400/0d0d0d/00ff99?text=1-on-1+Strategy+Session" alt="1-on-1 Strategy Session">
             <h3>1-on-1 Business Strategy Session</h3>
             <p>$99</p>
             <button onclick="payWithPaystack('1-on-1 Business Strategy Session', 9900)">Buy Now</button>
         </div>
+
         <div class="product-card">
-            <img src="https://via.placeholder.com/200" alt="Motivational Voice Pack">
+            <img src="https://placehold.co/600x400/0d0d0d/00ff99?text=Motivational+Voice+Pack" alt="Motivational Voice Pack">
             <h3>Motivational Voice Pack</h3>
             <p>$29</p>
             <button onclick="payWithPaystack('Motivational Voice Pack', 2900)">Buy Now</button>
         </div>
+
         <div class="product-card">
-            <img src="https://via.placeholder.com/200" alt="DRAEVYNTH Content Blueprint">
+            <img src="https://placehold.co/600x400/0d0d0d/00ff99?text=Content+Blueprint" alt="DRAEVYNTH Content Blueprint">
             <h3>DRAEVYNTH Content Blueprint</h3>
             <p>$39</p>
             <button onclick="payWithPaystack('DRAEVYNTH Content Blueprint', 3900)">Buy Now</button>
         </div>
+
         <div class="product-card">
-            <img src="https://via.placeholder.com/200" alt="Online Course: Make Money Online">
-            <h3>Online Course: Make Money Online</h3>
+            <img src="https://placehold.co/600x400/0d0d0d/00ff99?text=Make+Money+Online+Course" alt="Make Money Online Course">
+            <h3>Make Money Online Course</h3>
             <p>$79</p>
-            <button onclick="payWithPaystack('Online Course: Make Money Online', 7900)">Buy Now</button>
+            <button onclick="payWithPaystack('Make Money Online Course', 7900)">Buy Now</button>
         </div>
     </div>
 </section>
