--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.unsplash.com/photos/young-businessman-making-notes-in-notebook-while-director-sitting-at-table-and-pointing-at-monitor-explaining-him-the-work-Ju9_RQgJVCU.jpeg" alt="Content Blueprint">
-        <h3>DRAEVYNTH Content Blueprint</h3>
-        <p>$39</p>
-        <button onclick="payWithPaystack('DRAEVYNTH Content Blueprint', 3900)">Buy Now</button>
-      </div>
+    <img src="https://images.pexels.com/photos/5905707/pexels-photo-5905707.jpeg" alt="Content Blueprint">
+    <h3>DRAEVYNTH Content Blueprint</h3>
+    <p>$39</p>
+    <button onclick="payWithPaystack('DRAEVYNTH Content Blueprint', 3900)">Buy Now</button>
+</div>
 
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photos/online-virtual-video-conference-training-course-executive-webinar-iuCKI27RLUQ.jpeg" alt="Make Money Online Course">
-        <h3>Online Course: Make Money Online</h3>
-        <p>$79</p>
-        <button onclick="payWithPaystack('Make Money Online Course', 7900)">Buy Now</button>
-      </div>
+<div class="product-card">
+    <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg" alt="Make Money Online Course">
+    <h3>Online Course: Make Money Online</h3>
+    <p>$79</p>
+    <button onclick="payWithPaystack('Make Money Online Course', 7900)">Buy Now</button>
+</div>
 
     </div>
   </section>
