--- a/index.html
+++ b/index.html
@@ -54,34 +54,34 @@
         <p>$49</p>
         <button onclick="payWithPaystack('Silent Branding Masterclass', 4900)">Buy Now</button>
       </div>
-
+<a href="product.html?product=branding">View Details</a>
       <div class="product-card">
         <img src="https://images.pexels.com/photos/8349233/pexels-photo-8349233.jpeg" alt="1-on-1 Business Strategy Session">
         <h3>1-on-1 Business Strategy Session</h3>
         <p>$99</p>
         <button onclick="payWithPaystack('1-on-1 Business Strategy Session', 9900)">Buy Now</button>
       </div>
-
+<a href="product.html?product=branding">View Details</a>
       <div class="product-card">
         <img src="https://images.pexels.com/photos/8761621/pexels-photo-8761621.jpeg" alt="Motivational Voice Pack">
         <h3>Motivational Voice Pack</h3>
         <p>$29</p>
         <button onclick="payWithPaystack('Motivational Voice Pack', 2900)">Buy Now</button>
       </div>
-
+<a href="product.html?product=branding">View Details</a>
       <div class="product-card">
     <img src="https://images.pexels.com/photos/5905707/pexels-photo-5905707.jpeg" alt="Content Blueprint">
     <h3>DRAEVYNTH Content Blueprint</h3>
     <p>$39</p>
     <button onclick="payWithPaystack('DRAEVYNTH Content Blueprint', 3900)">Buy Now</button>
 </div>
-
+<a href="product.html?product=branding">View Details</a>
 <div class="product-card">
     <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg" alt="Make Money Online Course">
     <h3>Online Course: Make Money Online</h3>
     <p>$79</p>
     <button onclick="payWithPaystack('Make Money Online Course', 7900)">Buy Now</button>
-</div>
+</div><a href="product.html?product=branding">View Details</a>
 
     </div>
   </section>
