--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8',
         email: 'draevynth@gmail.com',
         amount: amount * 100,
-        currency: 'USD',
+        currency: 'NGN',
         metadata: { custom_fields: [{ display_name: "Product", variable_name: "product", value: product }] },
         callback: function(response) {
           window.location.href = "success.html?ref=" + response.reference;
