--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
     <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DRAEVYNTH | Entrepreneur & Silent Brand Strategist</title>
+    
+    <!-- SEO Meta Description -->
+    <meta name="description" content="DRAEVYNTH is a visionary entrepreneur helping businesses grow through Silent Branding strategies. Learn, buy products, and transform your brand presence.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="DRAEVYNTH, Business Strategist, Silent Branding, Make Money Online, Content Blueprint, Entrepreneurship">
+
+    <!-- Author -->
+    <meta name="author" content="DRAEVYNTH">
+
+    <!-- Open Graph for Social Media Sharing -->
+    <meta property="og:title" content="DRAEVYNTH | Silent Branding Expert">
+    <meta property="og:description" content="Discover DRAEVYNTH's strategies to build a powerful brand silently. Shop exclusive business tools & courses.">
+    <meta property="og:image" content="https://draevynthofficial.github.io/images/banner.png"> <!-- Replace with your image link -->
+    <meta property="og:url" content="https://draevynthofficial.github.io/">
+    <meta property="og:type" content="website">
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+</head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DRAEVYNTH | Official Website</title>
