--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
     <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta property="og:image" content="https://draevynthofficial.github.io/images/banner.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRAEVYNTH | Entrepreneur & Silent Brand Strategist</title>
