--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
     <!DOCTYPE html>
 <html lang="en">
-<head><meta property="og:image" content="https://draevynthofficial.github.io/images/banner.png">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
+<head><img src="https://via.placeholder.com/1200x630/0d0d0d/00ff99?text=DRAEVYNTH+Banner" 
+     alt="DRAEVYNTH Banner" 
+     style="width: 100%; max-width: 1200px; border-radius: 15px;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRAEVYNTH | Entrepreneur & Silent Brand Strategist</title>
