--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
     <!DOCTYPE html>
 <html lang="en">
-<head><img src="https://via.placeholder.com/1200x630/0d0d0d/00ff99?text=DRAEVYNTH+Banner" 
-     alt="DRAEVYNTH Banner" 
-     style="width: 100%; max-width: 1200px; border-radius: 15px;">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRAEVYNTH | Entrepreneur & Silent Brand Strategist</title>
+<head><body>
+    <h1>Welcome to DRAEVYNTH</h1>
+    <p>Silent Branding & Business Strategy</p>
+
+    <!-- Professional Auto-Fetched Banner -->
+    <img src="https://source.unsplash.com/1200x630/?business,technology,dark" 
+         alt="DRAEVYNTH Professional Banner" 
+         style="width: 100%; max-width: 1200px; border-radius: 15px; box-shadow: 0 0 20px rgba(0,0,0,0.7); margin-top: 20px;">
+</body>
     
     <!-- SEO Meta Description -->
     <meta name="description" content="DRAEVYNTH is a visionary entrepreneur helping businesses grow through Silent Branding strategies. Learn, buy products, and transform your brand presence.">
