--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
     <!DOCTYPE html>
 <html lang="en">
-<head><body>
-    <h1>Welcome to DRAEVYNTH</h1>
-    <p>Silent Branding & Business Strategy</p>
+<head><title>DRAEVYNTH | Silent Branding Strategist</title>
+<meta name="description" content="DRAEVYNTH empowers businesses to grow silently through strategic branding, exclusive products, and personalized mentoring.">
+<meta name="keywords" content="DRAEVYNTH, Silent Branding, Business Strategist, Entrepreneurship, Online Course">
+<meta name="author" content="DRAEVYNTH">
 
-    <!-- Professional Auto-Fetched Banner -->
-    <img src="https://source.unsplash.com/1200x630/?business,technology,dark" 
-         alt="DRAEVYNTH Professional Banner" 
-         style="width: 100%; max-width: 1200px; border-radius: 15px; box-shadow: 0 0 20px rgba(0,0,0,0.7); margin-top: 20px;">
-</body>
+<!-- Open Graph Meta Tags (SEO Social Preview) -->
+<meta property="og:title" content="DRAEVYNTH | Silent Branding Strategist">
+<meta property="og:description" content="Explore DRAEVYNTH's powerful strategies, products, and mentorship to silently grow your brand.">
+<meta property="og:image" content="https://source.unsplash.com/1200x630/?business,technology,dark">
+<meta property="og:url" content="https://draevynthofficial.github.io/">
+<meta property="og:type" content="website">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter Card Preview -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="DRAEVYNTH | Silent Branding Strategist">
+<meta name="twitter:description" content="Exclusive branding strategies and products by DRAEVYNTH to silently scale your business.">
+<meta name="twitter:image" content="https://source.unsplash.com/1200x630/?business,technology,dark">
     
     <!-- SEO Meta Description -->
     <meta name="description" content="DRAEVYNTH is a visionary entrepreneur helping businesses grow through Silent Branding strategies. Learn, buy products, and transform your brand presence.">
