--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Open Graph Meta Tags (SEO Social Preview) -->
 <meta property="og:title" content="DRAEVYNTH | Silent Branding Strategist">
 <meta property="og:description" content="Explore DRAEVYNTH's powerful strategies, products, and mentorship to silently grow your brand.">
-<meta property="og:image" content="https://source.unsplash.com/1200x630/?business,technology,dark">
+<meta property="og:image" content="https://via.placeholder.com/1200x630/0d0d0d/00ff99?text=DRAEVYNTH+BRANDING">
 <meta property="og:url" content="https://draevynthofficial.github.io/">
 <meta property="og:type" content="website">
 <meta property="og:image:width" content="1200">
