--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
     <!DOCTYPE html>
 <html lang="en">
-<head><title>DRAEVYNTH | Silent Branding Strategist</title>
+<head></body><div style="
+    width: 100%;
+    max-width: 1200px;
+    height: 300px;
+    background: linear-gradient(135deg, #0d0d0d 0%, #00ff99 100%);
+    color: white;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 0 30px rgba(0,0,0,0.7);
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
+    ">
+    <div>
+        <h1 style="margin: 0; font-size: 40px;">DRAEVYNTH</h1>
+        <p style="margin: 10px 0 0; font-size: 18px;">Silent Branding Strategist & Entrepreneur</p>
+    </div>
+</div><title>DRAEVYNTH | Silent Branding Strategist</title>
 <meta name="description" content="DRAEVYNTH empowers businesses to grow silently through strategic branding, exclusive products, and personalized mentoring.">
 <meta name="keywords" content="DRAEVYNTH, Silent Branding, Business Strategist, Entrepreneurship, Online Course">
 <meta name="author" content="DRAEVYNTH">
