--- a/index.html
+++ b/index.html
@@ -108,38 +108,143 @@
       <div class="product-card">
         <img src="https://images.pexels.com/photos/6949416/pexels-photo-6949416.jpeg" alt="Silent Branding Masterclass">
         <h3>Silent Branding Masterclass</h3>
-        <p>$49</p>
+        <p>$7</p>
         <button onclick="payWithPaystack('Silent Branding Masterclass', 4900)">Buy Now</button>
-      </div>
+      </div><button id="paystackBtn" style="padding: 10px 20px; background-color: #00ff99; color: #0d0d0d; border: none; border-radius: 8px; font-weight: bold;">Buy Now</button>
+
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+document.getElementById('paystackBtn').addEventListener('click', function () {
+    var handler = PaystackPop.setup({
+        key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8', // Your public test key
+        email: 'draevynth@gmail.com', // Your Gmail here
+        amount: 9900 * 100, // $99 in kobo (multiply by 100)
+        currency: 'USD',
+        callback: function(response){
+            // On successful payment
+            window.location.href = "thank-you.html?ref=" + response.reference;
+        },
+        onClose: function(){
+            // Payment cancelled
+            window.location.href = "payment-failed.html";
+        }
+    });
+    handler.openIframe();
+});
+</script>
 <a href="product.html?product=branding">View Details</a>
       <div class="product-card">
         <img src="https://images.pexels.com/photos/8349233/pexels-photo-8349233.jpeg" alt="1-on-1 Business Strategy Session">
         <h3>1-on-1 Business Strategy Session</h3>
         <p>$99</p>
         <button onclick="payWithPaystack('1-on-1 Business Strategy Session', 9900)">Buy Now</button>
-      </div>
+      </div><button id="paystackBtn" style="padding: 10px 20px; background-color: #00ff99; color: #0d0d0d; border: none; border-radius: 8px; font-weight: bold;">Buy Now</button>
+
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+document.getElementById('paystackBtn').addEventListener('click', function () {
+    var handler = PaystackPop.setup({
+        key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8', // Your public test key
+        email: 'draevynth@gmail.com', // Your Gmail here
+        amount: 9900 * 100, // $99 in kobo (multiply by 100)
+        currency: 'USD',
+        callback: function(response){
+            // On successful payment
+            window.location.href = "thank-you.html?ref=" + response.reference;
+        },
+        onClose: function(){
+            // Payment cancelled
+            window.location.href = "payment-failed.html";
+        }
+    });
+    handler.openIframe();
+});
+</script>
 <a href="product.html?product=branding">View Details</a>
       <div class="product-card">
         <img src="https://images.pexels.com/photos/8761621/pexels-photo-8761621.jpeg" alt="Motivational Voice Pack">
         <h3>Motivational Voice Pack</h3>
-        <p>$29</p>
+        <p>$6</p>
         <button onclick="payWithPaystack('Motivational Voice Pack', 2900)">Buy Now</button>
-      </div>
+      </div><button id="paystackBtn" style="padding: 10px 20px; background-color: #00ff99; color: #0d0d0d; border: none; border-radius: 8px; font-weight: bold;">Buy Now</button>
+
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+document.getElementById('paystackBtn').addEventListener('click', function () {
+    var handler = PaystackPop.setup({
+        key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8', // Your public test key
+        email: 'draevynth@gmail.com', // Your Gmail here
+        amount: 9900 * 100, // $99 in kobo (multiply by 100)
+        currency: 'USD',
+        callback: function(response){
+            // On successful payment
+            window.location.href = "thank-you.html?ref=" + response.reference;
+        },
+        onClose: function(){
+            // Payment cancelled
+            window.location.href = "payment-failed.html";
+        }
+    });
+    handler.openIframe();
+});
+</script>
 <a href="product.html?product=branding">View Details</a>
       <div class="product-card">
     <img src="https://images.pexels.com/photos/5905707/pexels-photo-5905707.jpeg" alt="Content Blueprint">
     <h3>DRAEVYNTH Content Blueprint</h3>
-    <p>$39</p>
+    <p>$7</p>
     <button onclick="payWithPaystack('DRAEVYNTH Content Blueprint', 3900)">Buy Now</button>
-</div>
+</div><button id="paystackBtn" style="padding: 10px 20px; background-color: #00ff99; color: #0d0d0d; border: none; border-radius: 8px; font-weight: bold;">Buy Now</button>
+
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+document.getElementById('paystackBtn').addEventListener('click', function () {
+    var handler = PaystackPop.setup({
+        key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8', // Your public test key
+        email: 'draevynth@gmail.com', // Your Gmail here
+        amount: 9900 * 100, // $99 in kobo (multiply by 100)
+        currency: 'USD',
+        callback: function(response){
+            // On successful payment
+            window.location.href = "thank-you.html?ref=" + response.reference;
+        },
+        onClose: function(){
+            // Payment cancelled
+            window.location.href = "payment-failed.html";
+        }
+    });
+    handler.openIframe();
+});
+</script>
 <a href="product.html?product=branding">View Details</a>
 <div class="product-card">
     <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg" alt="Make Money Online Course">
     <h3>Online Course: Make Money Online</h3>
-    <p>$79</p>
+    <p>$9</p>
     <button onclick="payWithPaystack('Make Money Online Course', 7900)">Buy Now</button>
 </div><a href="product.html?product=branding">View Details</a>
+<button id="paystackBtn" style="padding: 10px 20px; background-color: #00ff99; color: #0d0d0d; border: none; border-radius: 8px; font-weight: bold;">Buy Now</button>
 
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+document.getElementById('paystackBtn').addEventListener('click', function () {
+    var handler = PaystackPop.setup({
+        key: 'pk_test_d4cd43a90f0a19fd65f5c9c63815e6d68f9c95e8', // Your public test key
+        email: 'draevynth@gmail.com', // Your Gmail here
+        amount: 9900 * 100, // $99 in kobo (multiply by 100)
+        currency: 'USD',
+        callback: function(response){
+            // On successful payment
+            window.location.href = "thank-you.html?ref=" + response.reference;
+        },
+        onClose: function(){
+            // Payment cancelled
+            window.location.href = "payment-failed.html";
+        }
+    });
+    handler.openIframe();
+});
+</script>
     </div>
   </section>
 
